TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-03-19 MickeM
 * Fixed issue in installer and "Make file writable" by everyone now uses Users SID.
 * Fixed issue in installer and "Default plugins" now correctly sets them to 1.
 
2012-03-18 MickeM
 * Removed dependency on tcpip from the service and the installer
 * Added new command to EventLog CheckEventlogCached which checks result caught by the real-time process.
   CheckEventLogCACHE warn=gt:1 crit=gt:5
   Requires a configured real-time checker to work.
 * Added a series of keywords to EventLog check to facilitate better checking
 * Added a set of aliases to make EventLog behave more like Wdinwos Eventlog viewer.
 * Added a lot of unit test cases to the Eventlog checker.
 * Fixed issue with default schedule beeing added as an item and not a template

2012-03-11 MickeM
 * Fixed a lot of issues with the installer
 * Added so the installer can generate a config file for you
 * Fixed so installer uses the correct path for password and allowed hosts

2012-03-08 MickeM
 * Major improvments to the WMI command line syntax.
   You can now: list namespaces, list classes, list instances as well as run queries.
   Means you can use NSCLient++ as a almost full featured WMI command line client.
   For details use: nscp wmi --help
 * Added sample python WMI script to list all classes in all namespaces
 * Fixed so if python scripts does not expose init and shutdown they will not be called
 * Added new option --simple to CheckWMI wmi commands to return a simple list without formatting.
	
2012-03-06 MickeM
 * Added "back" WMI Query command line exec like so:
    nscp wmi --exec wmi-query
	CheckWMI Command line syntax:
	Allowed options:
	  -h [ --help ]                        Show help screen
	  -w [ --wmi-query ] arg               Query to execute