@@ -18,7 +18,7 @@
           <Condition Action="enable">CONFIGURATION_TYPE = "ini://${exe-path}/nsclient.ini"</Condition>
           <Condition Action="disable"><![CDATA[CONFIGURATION_TYPE <> "ini://${exe-path}/nsclient.ini"]]></Condition>
         </Control>
-        <Control Id="userWriteConfig" Type="CheckBox" X="60"	Y="88" Width="260" Height="20" Property="USER_WRITABLE_CONFIG" Text="Allow Everyone to write config file" CheckBoxValue="1">
+        <Control Id="userWriteConfig" Type="CheckBox" X="60"	Y="88" Width="260" Height="20" Property="USER_WRITABLE_CONFIG" Text="Allow all users to write config file" CheckBoxValue="1">
           <Condition Action="enable">CONFIGURATION_TYPE = "ini://${exe-path}/nsclient.ini" AND INSTALL_SAMPLE_CONFIG</Condition>
           <Condition Action="disable"><![CDATA[CONFIGURATION_TYPE <> "ini://${exe-path}/nsclient.ini" OR NOT INSTALL_SAMPLE_CONFIG]]></Condition>
         </Control>
