@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,145
-#define STRPRODUCTVER  "0,4,0,145"
-#define STRPRODUCTDATE "2012-03-18"
+#define PRODUCTVER     0,4,0,147
+#define STRPRODUCTVER  "0,4,0,147"
+#define STRPRODUCTDATE "2012-03-20"
 #endif // VERSION_HPP
